--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
       <artifactId>aws-java-sdk-s3</artifactId>
       <version>1.12.153</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
